# TOOL

./: .gitignore  CMakeLists.txt  CMake_tutorial_log.md  README.md  dev.env  folder_structure.txt
gate_macros/generate_condition_macros/: generate_macros_for_motion.py  pos.txt  test_motion.txt
gate_macros/macros/: GATE_singularity_entrypoint.sh  GateMaterials.db  conditions.mac  electronics.mac  geometry.mac  moliner_phantom.mac  moliner_source.mac  neurolfv01_geometry.mac  parameters.mac  physics.mac  setup.mac  setup_moliner.mac  test_phantom.mac  test_source.mac
lib/: CMakeLists.txt
python/: motion_tracking.py
python/python_module/: stir_helper.py
python_tool/: plot_sinogram.py
scripts/: run_csorter.sh  run_singularity_STIR.sh
src/: CMakeLists.txt  main.cpp
src/VirtualScanner/: CMakeLists.txt  VirtualScanner.cpp  VirtualScanner.h
src/include/: CMakeLists.txt  Matrix.h  Matrix2D.cpp  Matrix2D.h  SiPM.cpp  SiPM.h  Vector3D.cpp  Vector3D.h  VirtualScanner.cpp  VirtualScanner.h  extend_armadillo.h  extend_boost.h
src/source/: PrintCrystalMap.cpp
